--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,10 +1,69 @@
 @misc{domoticaWiki,
-  author = {{Wikipedia contributors}},
+  author = {{Wikipedia contributors Domotica}},
   title = {Domotica},
   year = {2024},
   note = {Accesso il 10 aprile 2025},
   url = {https://it.wikipedia.org/wiki/Domotica}
 }
+@misc{wikipedia_knx,
+  author       = {{Wikipedia contributors KNX}},
+  title        = {KNX (standard)},
+  year         = {2025},
+  howpublished = {\url{https://it.wikipedia.org/wiki/KNX_(standard)}},
+  note         = {Accessed: 2025-08-25}
+}
+@misc{wikipedia_rs485,
+  author       = {{Wikipedia contributors RS-485}},
+  title        = {RS-485},
+  year         = {2025},
+  howpublished = {\url{https://it.wikipedia.org/wiki/RS-485}},
+  note         = {Accessed: 2025-08-25}
+}
+
+@misc{csa_zigbee,
+  author       = {{Connectivity Standards Alliance}},
+  title        = {Zigbee Technology Overview},
+  year         = {2025},
+  howpublished = {\url{https://csa-iot.org/all-solutions/zigbee/}},
+  note         = {Accessed: 2025-08-25}
+}
+
+@misc{zwave_alliance,
+  author       = {{Z-Wave Alliance}},
+  title        = {Z-Wave Technology Overview},
+  year         = {2025},
+  howpublished = {\url{https://z-wavealliance.org/z-wave/}},
+  note         = {Accessed: 2025-08-25}
+}
+@misc{wifi_alliance,
+  author       = {{Wi-Fi Alliance}},
+  title        = {Discover Wi-Fi},
+  year         = {2025},
+  howpublished = {\url{https://www.wi-fi.org/discover-wi-fi}},
+  note         = {Accessed: 2025-08-25}
+}
+@misc{bluetooth_sig_ble,
+  author       = {{Bluetooth SIG}},
+  title        = {Bluetooth Low Energy},
+  year         = {2025},
+  howpublished = {\url{https://www.bluetooth.com/learn-about-bluetooth/tech-overview/low-energy/}},
+  note         = {Accessed: 2025-08-25}
+}
+@misc{thread_group,
+  author       = {{Thread Group}},
+  title        = {About Thread},
+  year         = {2025},
+  howpublished = {\url{https://www.threadgroup.org/}},
+  note         = {Accessed: 2025-08-25}
+}
+@misc{csa_matter,
+  author       = {{Connectivity Standards Alliance}},
+  title        = {Matter: The Foundation for Connected Things},
+  year         = {2025},
+  howpublished = {\url{https://csa-iot.org/all-solutions/matter/}},
+  note         = {Accessed: 2025-08-25}
+}
+
 @misc{miraiBotnet,
   author = {Antonakakis, M. and April, T. and Bailey, M. et al.},
   title = {Understanding the Mirai Botnet},
@@ -81,6 +140,30 @@
   year      = {2021},
   note      = {Accessed: 2025-08-05},
   url       = {https://www.Wi-Fi.org/internet-things-iot}
+}
+
+@misc{gdpr,
+  author       = {{European Union}},
+  title        = {Regulation (EU) 2016/679 of the European Parliament and of the Council (General Data Protection Regulation)},
+  year         = {2016},
+  howpublished = {\url{https://eur-lex.europa.eu/eli/reg/2016/679/oj}},
+  note         = {Accessed: 2025-08-25}
+}
+
+@misc{enisa-smart-home,
+  author       = {{European Union Agency for Cybersecurity (ENISA)}},
+  title        = {Guidelines for Securing the Internet of Things},
+  year         = {2020},
+  howpublished = {\url{https://www.enisa.europa.eu/publications/guidelines-for-securing-the-internet-of-things}},
+  note         = {Accessed: 2025-08-25}
+}
+
+@misc{nist-iot,
+  author       = {{National Institute of Standards and Technology (NIST)}},
+  title        = {Considerations for Managing Internet of Things (IoT) Cybersecurity and Privacy Risks},
+  year         = {2020},
+  howpublished = {\url{https://doi.org/10.6028/NIST.IR.8228}},
+  note         = {Accessed: 2025-08-25}
 }
 
 @misc{MatterWhitePaper,
