--- a/capitoli/cap1.tex
+++ b/capitoli/cap1.tex
@@ -8,7 +8,7 @@ Le radici della domotica affondano negli anni '80, quando i primi sistemi cablat
 L'arrivo dell'intelligenza artificiale ha ulteriormente ampliato le possibilità ed accelerato il cambiamento in atto. Oggi le nostre case non si limitano a rispondere ai nostri comandi: è come se ci conoscessero e si adattassero a noi. Per esempio, dopo qualche settimana il sistema capisce che di solito accendiamo le luci del salotto verso le 19:00 e inizia a farlo automaticamente. Gli assistenti vocali come Alexa, Google o Siri non sono più semplici esecutori di ordini: a volte ci sorprendono suggerendo cose utili tipo "Hey, sta per piovere, vuoi che chiuda le finestre?" oppure "È ora di andare a dormire, spengo le luci?". È un po' come avere un maggiordomo digitale che impara a conoscerti giorno dopo giorno.
 
 \vspace{0.5cm}
-L'edge computing costituisce un'innovazione particolarmente rilevante, consentendo l'elaborazione dei dati direttamente a livello locale, eliminando la dipendenza dal cloud. Questo approccio migliora sensibilmente i tempi di risposta: una telecamera di sicurezza con capacità di edge computing può identificare immediatamente un intruso e inviare alert in tempo reale, senza dover attendere l'elaborazione su server remoti.
+L'edge computing rappresenta una ulteriore innovazione rilevante che consentendo l'elaborazione dei dati direttamente a livello locale riduce ed in alcuni casi elimina la dipendenza dal cloud. Con questo nuovo approccio si migliorano sensibilmente i tempi delle risposte: una telecamera di sicurezza con le funzionalità e la capacità di edge computing può identificare immediatamente un intruso e inviare alert in tempo reale, senza così dover attendere l'elaborazione su server remoti.
 
 
 \vspace{0.5cm}
@@ -18,7 +18,7 @@ Le tecnologie di rete continuano a evolversi e questo porterà sicuramente nuove
 Tuttavia, una delle sfide più rilevanti nel settore della domotica residenziale riguarda l'interoperabilità tra dispositivi di differenti produttori. L'esperienza comune di molti utenti che si approcciano alla domotica nella propria abitazione sono le difficoltà legate alla gestione di applicazioni multiple e protocolli di comunicazione non compatibili, oltre alla necessità di acquisire componenti hardware dedicate per ciascun ecosistema proprietario ( Hub per la gestione dei diversi dispositivi per ogni marca).  Tuttavia l'introduzione di standard aperti come il protocollo Matter rappresenta un'evoluzione significativa in questa direzione, favorendo una maggiore integrazione tra soluzioni di produttori diversi e la possibilità di avere un unico Hub centrale in grado di gestire dispositivi di marche differenti.
 
 \vspace{0.5cm}
-La presente tesi si focalizza sull'evoluzione dei protocolli di comunicazione IoT nella domotica residenziale, con particolare enfasi su sicurezza, prestazioni e interoperabilità. Per concretizzare l'analisi teorica, presenterò un caso studio basato su Apple HomeKit, selezionato per la sua usabilità e le robuste caratteristiche di sicurezza.
+La presente tesi sarà incentrata sul passi evolutivi nei protocolli di comunicazione IoT per la domotica residenziale, con un focus su alcuni aspetti, quali la sicurezza, le prestazioni e l'interoperabilità, sarà presentato anche caso studio per passare dalla ateoria alla pratica. Il caso stusdio sarà basato su Apple HomeKit, selezionato in questo caso per la sua usabilità, per le sue caratteristiche di sicurezza integrata e per la facilità di condivisione delle imporstazioni con i componenti della famiglia.
 
 % Sezione metodologica riveduta
 \section{Approccio metodologico}
