--- a/capitoli/cap2.tex
+++ b/capitoli/cap2.tex
@@ -9,7 +9,7 @@ La domotica rappresenta una trasformazione a 360 gradi del modo in cui vengpono 
 
 \subsection{Cos'è davvero la domotica?}
 
-Il termine \textit{domotica} è l'unione del termine latino \textit{domus} (casa) e dal termine \textit{informatica}. Indica l'integrazione di tecnologie elettroniche, informatiche e di telecomunicazione per automatizzare, controllare e ottimizzare i sistemi presenti in un'abitazione. Il suo scopo principale è migliorare il comfort, la sicurezza, l'efficienza energetica e l'accessibilità degli ambienti domestici \parencite{domoticaWiki}.
+<<Il termine \textit{domotica} è l'unione del termine latino \textit{domus} (casa) e dal termine \textit{informatica}. Indica l'integrazione di tecnologie elettroniche, informatiche e di telecomunicazione per automatizzare, controllare e ottimizzare i sistemi presenti in un'abitazione. Il suo scopo principale è migliorare il comfort, la sicurezza, l'efficienza energetica e l'accessibilità degli ambienti domestici>> \footcite{domoticaWiki}.
 
 \subsection{I pilastri della casa intelligente}
 
@@ -135,16 +135,16 @@ Gli utenti possono interagire con il sistema tramite:
 
 La rete collega tutti i dispositivi tra di loro. Può essere cablata (es. KNX) o wireless (es. Zigbee, Z-Wave, Wi-Fi, Thread). I protocolli scelti influenzano la scalabilità, l’efficienza e la sicurezza del sistema.
 
-\section{Vantaggi della domotica}
+\section{I vantaggi della domotica}
 
-\subsection{Efficienza energetica}
+\subsection{Efficientamento energetico}
 
-La domotica consente un uso più consapevole delle risorse energetiche utilizzate nella casa:
+La domotica permette di gestire in maniera più consapevole i consumi energetici che vengono utilizzati dalla casa, tra questi possiamo avere:
 
 \begin{itemize}
-    \item ottimizzazione del riscaldamento e raffrescamento;
-    \item spegnimento automatico di luci e dispositivi inutilizzati;
-    \item monitoraggio dei consumi in tempo reale.
+    \item la gestione e ottimizzazione del sistema di riscaldamento e del sistema di raffrescamento;
+    \item il monitoraggio dei dispositivi inutilizzati e lo spegnimento automatico di luci;
+    \item poter costruire una dashboard per monitorare i consumi in tempo reale.
 \end{itemize}
 
 \subsection{Sicurezza}
