--- a/capitoli/cap3.tex
+++ b/capitoli/cap3.tex
@@ -1,50 +1,66 @@
-\chapter{Evoluzione dei Protocolli di Comunicazione IoT}
+\chapter{L'evoluzione dei Protocolli di Comunicazione per l'IoT}
 
-\section{Introduzione ai protocolli IoT}
-I protocolli di comunicazione IoT sono il vero e proprio "linguaggio" che permette ai dispositivi intelligenti di casa nostra di parlarsi e collaborare. Pensate a quando accendete la luce dal vostro smartphone o regolate il termostato prima di arrivare a casa, tutto questo è possibile grazie a protocolli che gestiscono la comunicazione tra dispositivi diversi, spesso di marche e tecnologie differenti. 
-Nel tempo, questi protocolli si sono evoluti per rispondere a nuove esigenze, come consumi energetici più bassi, maggiore sicurezza e facilità d’uso. 
-I protocollik possono essere divisi in due grandi famiglie: quelli cablati, come KNX e RS-485, e quelli wireless, come Zigbee, Z-Wave, Wi-Fi, Bluetooth Low Energy, Thread e Matter.
+\section{Introduzione ai protocolli per l'IoT}
+I protocolli di comunicazione per l'IoT possiamo immaginarli come il vero e proprio "linguaggio" che rende possibile ai dispositivi intelligenti della nostra casa di parlarsi e di collaborare. Pensiamo a quando accendiamo la luce grazie all'utilizzo del nostro smartphone o  regoliamo il termostato per riscsaldare la casa prima di arrivare, tutto questo azioni sono possibili grazie ai protocolli di comunicazione che gestiscono per l'appunto la comunicazione tra dispositivi diversi, spesso di marche e con tecnologie differenti. 
+Nel corso del tempo, questi protocolli si sono via via evoluti per poter rispondere alle nuove esigenze del mercato, come ad esempio avendo una miglior gestione dei consumi, una maggiore sicurezza ed una miglior facilità d’uso. 
+I variprotocollik possono essere divisi in due grandi famiglie, quelli cablati come KNX e RS-485, e quelli wireless come Zigbee, Z-Wave, Wi-Fi, Bluetooth Low Energy, Thread e Matter.
 
 \section{Protocolli cablati: KNX e RS-485}
-I protocolli cablati sono stati i pionieri della domotica e ancora oggi sono molto usati, soprattutto in contesti dove la stabilità della comunicazione è fondamentale.\\
+I protocolli cablati sono stati i primi protocolli utilizzati nella domotica, residenziale e industrile,  ed ancora oggi vengono molto utilizzati, soprattutto in quei progetti dove la stabilità della comunicazione è fondamentale.\\
 
-\textbf{KNX} è uno standard internazionale molto affidabile e flessibile. Immaginate un grande edificio, come un hotel o un ufficio, dove luci, riscaldamento, tende e sistemi di sicurezza devono funzionare in modo coordinato e senza intoppi. KNX permette di collegare tutti questi dispositivi con un unico sistema cablato, garantendo che tutto funzioni senza problemi. 
-Il vantaggio principale nel suo utilizzo è la grande affidabilità e la possibilità di personalizzare il sistema in base alle esigenze specifiche in fase di progettazione. Tuttavia, l’installazione richiede un intervento tecnico specializzato e può risultare costosa, il che lo rende meno adatto per case più piccole, inoltre successive modifiche o ampliamenti non previsti richiedono nuovi lavori sull'infrastruttura della casa.\\
+<<\textbf{KNX} è uno standard aperto per la building automation, definito a livello internazionale come ISO/IEC 14543-3. È stato sviluppato per garantire l’interoperabilità tra dispositivi e sistemi di diversi produttori, con applicazioni che spaziano dall’illuminazione al riscaldamento, fino alla sicurezza e al controllo degli elettrodomestici. KNX è un sistema standardizzato a livello mondiale per la domotica e la gestione tecnica degli edifici>> \footcite{wikipedia_knx}. 
+Un suo utilizzo classico è ad esempio in un grande edificio, come può essere un'hotel, dove le luci, il riscaldamento, le tende ed i sistemi di sicurezza deveono poter funzioanre senza problemi. Tuttavia un suo impiego in ambieti più piccoli come nelle case presenta degli svantaggi economici, per la necessita dell'intervento di tecnici specializzati, ed inoltre successivi ampliamenti richiederanno nuovi lavori edili se non previsti in fase iniziale di progettazione\\
 
 \textbf{RS-485}, invece, è spesso usato in contesti industriali o in impianti domestici più semplici per risolvere specifici problemi, come ad esempio un sistema di allarme o controllo degli accessi. 
+<<RS-485 è uno standard di comunicazione seriale definito dall’EIA/TIA, progettato per consentire trasmissioni affidabili in sistemi multipunto e su lunghe distanze. RS-485 definisce le caratteristiche elettriche dei driver e dei ricevitori per l’uso in sistemi digitali bilanciati multipunto>> \footcite{wikipedia_rs485}.
+
 RS-485 può garantire una comunicazione stabile anche su lunghe distanze e in ambienti con molte interferenze elettriche, questo si traduce in un sistema robusto che raramente perde il segnale. Tuttavia, come KNX, richiede cablaggi e competenze tecniche per l’installazione, inoltre ache in questo caso sono onerosi i successivi ampliamenti e modifiche se non previste nella prima fase di progettazione.
 
-\section{Protocolli wireless: Zigbee, Z-Wave, Wi-Fi e Bluetooth Low Energy}
-Con l’avvento delle tecnologie wireless, la domotica è diventata più accessibile e flessibile, permettendo installazioni più semplici e meno invasive.\\
+\section{I protocolli wireless: Zigbee, Z-Wave, Wi-Fi e Bluetooth Low Energy}
+Con l'arrivo e la diffusione delle tecnologie wireless, la domotica è potuta diventata più accessibile e flessibile, permettendo così alle  nuove installazioni di essere più semplici e meno invasive.\\
 
-\textbf{Zigbee} è molto popolare per dispositivi come sensori di movimento, termostati smart e lampadine intelligenti. Ad esempio, in una casa, i sensori Zigbee possono comunicare tra loro formando una rete mesh,  se un dispositivo è lontano dal router il segnale passa attraverso altri dispositivi fino a raggiungerlo. Questa tecnica permette di poter installare anche in case di grandi dimensioni o con muri spessi che schermerebbero il segnale, diversi dispositivi.
+<<\textbf{Zigbee} è un protocollo di comunicazione wireless a basso consumo energetico, progettato per applicazioni che richiedono trasmissione di dati a corto raggio e con bassa velocità. Basato sullo standard IEEE 802.15.4, Zigbee è stato sviluppato e mantenuto dalla \emph{Connectivity Standards Alliance} (già Zigbee Alliance) con l’obiettivo di favorire l’interoperabilità tra dispositivi di diversi produttori e garantire soluzioni affidabili e scalabili per l’automazione domestica e industriale>> \footcite{csa_zigbee}.\\
+
+Zigbee è molto popolare per dispositivi come sensori di movimento, termostati smart e lampadine intelligenti. Ad esempio, in una casa, i sensori Zigbee possono comunicare tra loro formando una rete mesh,  se un dispositivo è lontano dal router il segnale passa attraverso altri dispositivi fino a raggiungerlo. Questa tecnica permette di poter installare anche in case di grandi dimensioni o con muri spessi che schermerebbero il segnale, diversi dispositivi.
 Un vantaggio è che la comunicazione tra i dispositivi e l'hub centrale resta stabile, a questo si aggiunge il basso consumo energetico, che permette ai sensori di durare anni con una singola batteria. 
 Lo svantaggio è la necessità di un hub centrale per ogni marca di dispositivi e la difficoltà nella configurazione e nei successivi momenti di aggiornamento del firmware dei singoli dispositivi.\\
 
-\textbf{Z-Wave} è simile a Zigbee ma spesso preferito in ambito residenziale per la sua semplicità di configurazione iniziale, i wizard di installazione e configurazione sono intuitivi e permettono di collegare dispositivi come serrature smart o controller per tapparelle. 
+<<\textbf{Z-Wave} è un protocollo wireless progettato specificamente per applicazioni di domotica e automazione residenziale. Utilizza frequenze sub-GHz per garantire una copertura più ampia e minori interferenze rispetto al Wi-Fi o al Bluetooth. Lo standard è gestito dalla \emph{Z-Wave Alliance}, che promuove l’interoperabilità tra dispositivi di diversi produttori e assicura la certificazione dei prodotti conformi>> \footcite{zwave_alliance}.\\
+Z-Wave è simile a Zigbee ma spesso preferito in ambito residenziale per la sua semplicità di configurazione iniziale, i wizard di installazione e configurazione sono intuitivi e permettono di collegare dispositivi come serrature smart o controller per tapparelle. 
 Un'ulteriore caratteristica è la sicurezza integrata, così come la compatibilità tra marche diverse, tuttavia, la velocità di trasmissione è limitata rispetto al Wi-Fi, il che lo rende meno adatto a trasmettere grandi quantità di dati.\\
 
-\textbf{Wi-Fi} è probabilmente il protocollo più familiare, essendo quello usato per connettere smartphone, computer e smart TV a internet, molti dispositivi IoT, come videocamere di sicurezza o assistenti vocali, usano il Wi-Fi perché garantisce alta velocità e non richiede hub aggiuntivi. 
-Lo svantaggio principale sta nell’alto consumo energetico, che limita l’uso di Wi-Fi in dispositivi alimentati a batteria, altre problematiche riguradano la sicurezza di questi dispositivi e la congestione della rete Wi-Fi domestica.\\
+<<\textbf{Wi-Fi} è una famiglia di tecnologie di rete wireless basate sullo standard IEEE 802.11. È progettato per consentire connessioni a banda larga senza fili, garantendo interoperabilità e compatibilità tra dispositivi di diversi produttori. La \emph{Wi-Fi Alliance}, l’organizzazione che gestisce il programma di certificazione, assicura che i prodotti conformi possano comunicare tra loro in modo sicuro ed efficiente>> \footcite{wifi_alliance}.\\
 
-\textbf{Bluetooth Low Energy (BLE)} è ideale per dispositivi a corto raggio e a bassissimo consumo, come smartwatch, fitness tracker o sensori di prossimità. Un utilizzo molto comune di questo protocolo è per sbloccare la porta  o accessi quando si avvicina uno smartphone od un Tag BLE. Il vantaggio è il risparmio energetico e la semplicità, ma la portata limitata lo rende inadatto per coprire tutta la casa senza dispositivi aggiuntivi.
+\textbf{Wi-Fi} è probabilmente il protocollo più familiare, essendo quello usato per connettere smartphone, computer e smart TV a internet, molti dispositivi IoT, come videocamere di sicurezza o assistenti vocali, usano il Wi-Fi perché garantisce alta velocità e non richiede hub aggiuntivi. 
+Lo svantaggio principale sta nell’alto consumo energetico, che limita l’uso di Wi-Fi nei dispositivi alimentati a batteria, altre problematiche riguradano la sicurezza di questi dispositivi e la congestione della rete Wi-Fi domestica.\\
+
+<<\textbf{Bluetooth Low Energy (BLE)} è una variante a basso consumo dello standard Bluetooth, introdotta con la specifica Bluetooth 4.0 e sviluppata dal \emph{Bluetooth Special Interest Group (SIG)}. È progettata per applicazioni che richiedono comunicazioni wireless a corto raggio e con un consumo energetico minimo, come sensori, dispositivi indossabili e soluzioni IoT. Grazie alla sua diffusione e compatibilità, BLE è diventato uno dei protocolli più utilizzati nella connettività tra dispositivi intelligenti>> \footcite{bluetooth_sig_ble}.\\
+
+
+Il BLE è utilizzato prevalentemente quindi nei dispositivi a corto raggio e con bassissimo consumo energetivco, come ad esempio gli smartwatch, i fitness tracker o i sensori di prossimità. Un suo utilizzo classico è quello per lo sblocco di una porta quando ci si avvicina con uno smartphone o con un Tag BLE. Il suo grande vantaggio è il risparmio energetico e la sua semplicità, il suo problema principale riguarda la portata limitata del segnale che lo rende inadatto per coprire tutta la casa senza dispositivi aggiuntivi.
+
 \section{Thread e Matter: verso l'interoperabilità e l'unificazione}
 Chi si avvicina alla domotica spesso scopre con disappunto che i dispositivi di marche diverse faticano a comunicare tra loro. È frustrante comprare una lampadina smart di un brand e scoprire che non funziona con l'hub di un altro. Thread e Matter sono protocolli nati proprio per risolvere questa babele tecnologica.\\
 
-\textbf{Thread} è una rete mesh basata su IPv6 che permette ai dispositivi di comunicare direttamente tra loro senza passare per un hub centrale. In pratica, le luci, i sensori e i termostati si collegano tra loro creando una ragnatela di connessioni: se una lampadina si spegne o perde il segnale, gli altri dispositivi trovano automaticamente percorsi alternativi per comunicare. Il risultato? Una rete che si auto-ripara e funziona con maggiore stabilità rispetto a tecnologie precedenti come Zigbee o Z-Wave. La configurazione è generalmente più semplice e immediata. Il rovescio della medaglia è che Thread è ancora una tecnologia giovane e non tutti i prodotti sul mercato la supportano ancora.\\
+<<\textbf{Thread} è un protocollo di rete wireless basato su IPv6, sviluppato per dispositivi IoT a basso consumo energetico. Utilizza IEEE 802.15.4 come livello fisico e supporta topologie mesh per garantire affidabilità, sicurezza e auto-riparazione della rete. Lo sviluppo e la promozione dello standard sono gestiti dal \emph{Thread Group}>> \footcite{thread_group}.\\
 
-\textbf{Matter} rappresenta l'iniziativa più ambiziosa nel settore della domotica, concepita per stabilire un protocollo di comunicazione universale tra dispositivi intelligenti di differenti produttori. Questo standard si propone di risolvere le problematiche di interoperabilità che caratterizzano l'attuale panorama della smart home, dove dispositivi appartenenti a ecosistemi diversi presentano significative limitazioni nell'integrazione reciproca. L'implementazione di Matter consente ai dispositivi certificati di operare trasversalmente su piattaforme multiple, includendo i principali ecosistemi commerciali, tale standardizzazione favorisce una maggiore flessibilità nella composizione dei sistemi domotici, permettendo scelte basate su criteri qualitativi e funzionali piuttosto che su vincoli di compatibilità.
+Thread permette ai dispositivi quali le luci, i sensori e i termostati di connettersi tra di loro creando una ragnatela di nodi, questo rende possibile qualora una lampadina si spegne o perde il segnale, che gli altri dispositivi trovino automaticamente percorsi alternativi per comunicare, aumnetando la stabilità rispetto ai protoicolli precedenti. La configurazione è generalmente più semplice e immediata. Il principale problema rigurda al diffusione essendo ancora una tecnologia giovane, è poco integrata o supportata dai vari produttori di dispositivi\\
+
+<<\textbf{Matter} è uno standard aperto di connettività per la smart home, sviluppato congiuntamente da un consorzio di aziende guidato dalla \emph{Connectivity Standards Alliance}. Il suo obiettivo è garantire un livello elevato di interoperabilità tra dispositivi e piattaforme diverse, riducendo la frammentazione del mercato e semplificando l’esperienza d’uso per i consumatori. Matter si basa su protocolli IP come Wi-Fi ed Ethernet per la comunicazione ad alta velocità e su Thread per scenari a basso consumo>> \footcite{csa_matter}.\\
+
+
+Matter quindi rappresenta forse l'iniziativa più ambiziosa nell'intero settore della domotica, nasce dall'idea di stabilire un protocollo di comunicazione universale tra dispositivi intelligenti di differenti produttori. Questo nuovo standard si pone alla base per la soluzione delle problematiche di interoperabilità che caratterizzano l'attuale panorama della smart home, in cui i dispositivi appartenenti a ecosistemi diversi presentano impossibilità tecniche o limitazioni significative per l'integrazione reciproca. L'adozione di Matter consente ai diversi dispositivi certificati di poter operare contemporaneamente su piattaforme differenti, come i principali hub commerciali (Alexa, Apple, Google, Samsung), tale standardizzazione garantisce una semplificazione nella configurazione della casa domotica, permettendo di fare delle scelte basate su criteri qualitativi e funzionali piuttosto che su vincoli di compatibilità.
 
 Nonostante le promettenti prospettive, l'adozione del protocollo si trova ancora in fase di espansione, con una progressiva ma non ancora completa diffusione nel mercato. È importante sottolineare che il protocollo Matter non consente l'integrazione di qualsiasi tipologia di dispositivo, ma definisce specifiche categorie supportate attraverso le proprie direttive tecniche. Questo approccio selettivo garantisce l'affidabilità e la coerenza dell'ecosistema, limitando tuttavia l'universalità inizialmente prospettata.
 
 \section{Criteri di selezione dei protocolli}
-Quando si deve scegliere un protocollo per la casa intelligente, bisogna considerare diversi aspetti pratici:
+Quando si deve scegliere un protocollo per la nostra casa intelligente, bisogna prendere in considerazione diversi aspetti pratici:
 \begin{itemize}
-    \item \textbf{Consumo energetico}: Se avete dispositivi alimentati a batteria, come sensori o serrature, è fondamentale scegliere protocolli a basso consumo per evitare continui cambi di batteria.
+    \item \textbf{Consumo energetico}: Se avete dispositivi alimentati con delle batterie, come i sensori o le serrature, è fondamentale scegliere dei prodotti che abbiamo dei protocolli a basso consumo energetico  per evitare continui ricambi delle batteria.
     \item \textbf{Portata e copertura}: In case grandi o con muri spessi, protocolli con rete mesh come Zigbee, Thread o Z-Wave possono garantire una copertura migliore.
-    \item \textbf{Velocità e latenza}: Per applicazioni che richiedono risposte immediate, come videocamere o sistemi di allarme, è meglio optare per protocolli veloci come Wi-Fi.
+    \item \textbf{Velocità e latenza}: Per le applicazioni che necessitanod di avere delle risposte immediate, come sono le videocamere o i sistemi di allarme, è meglio scegliere dei dispositivi che supportino i protocolli veloci come il Wi-Fi.
     \item \textbf{Facilità d'uso e integrazione}: Per far funzionare insieme dispositivi di produttori diversi, è essenziale verificare che supportino gli stessi protocolli di comunicazione, preferendo standard aperti che facilitino la configurazione e garantiscano una reale interoperabilità.
-    \item \textbf{Sicurezza e privacy}: Proteggere la propria rete domestica è fondamentale, quindi è bene preferire protocolli che offrono solide misure di sicurezza.
+    \item \textbf{Sicurezza e privacy}: Per proteggere la propria rete domestica è poi fondamentale sceglere dispositivi che supportino i protocolli che offrono le più solide misure di sicurezza.
 \end{itemize}
 
 Nel prossimo capitolo approfondiremo proprio questi aspetti di sicurezza e privacy nei protocolli IoT domestici, fornendo consigli pratici per mantenere la vostra casa intelligente protetta e affidabile.
