--- a/capitoli/cap7.tex
+++ b/capitoli/cap7.tex
@@ -35,7 +35,7 @@ La frammentazione dell’ecosistema domotico diventa nella pratica per l’utent
 
 \textbf{Troppe app, poca chiarezza}: Secondo una ricerca del 2023, l’utente medio di una casa intelligente deve utilizza tra le 8 e le 12 diverse app, per poter controllare i propri dispositivi installati. Ogni produttore inoltre ha una sua interfaccia differente, con logiche diverse e tipologie di notifiche differenti. Il risultato? Lo smartphone diventa un campo di battaglia digitale in cui non si riesce ad avere una visione d’insieme del sistema.
 
-\textbf{Automazioni che faticano a cooperare}: Una semplice regola, come “quando esco di casa, spegni tutte le luci e abbassa il termostato”, può trasformarsi in un puzzle complicato. Ogni pezzo della catena, dalle lampadine al termostato ai sensori di presenza, parlano una lingua diversa, e spesso non si capiscono. Una parte funziona, mentre un'altra no, costringendo l’utente a dover intervenire manualmente.
+\textbf{Automazioni che faticano a cooperare}: un esempio apparentemente banale, come la regola “quando esco di casa, spegni tutte le luci e abbassa il termostato”, può in realtà trasformarsi in una sfida complessa. Ogni elemento della catena – dalle lampadine intelligenti ai sensori di presenza, fino al sistema di riscaldamento – utilizza protocolli diversi e non sempre compatibili tra di loro. Il risultato è che alcune automazioni funzionano correttamente, mentre altre non vengono eseguite come previsto, costringendo l’utente ad intervenire manualmente. 
 
 \textbf{Lentezza imprevista}: Ogni volta che un comando deve attraversare più livelli, ad esempio da prima un hub Zigbee, poi ad un bridge proprietario, poi accedere al cloud del produttore, da lì nuovamente accedere ad un altro servizio in cloud ed infine finalmente al dispositivo, così facendo si accumulano ritardi, facendo pensare all'utente che qualche cosa non abbia funzionato. Quello che dovrebbe essere un’azione immediata può impiegare diversi secondi. Non è solo fastidioso, ma anche poco affidabile.
 
