--- a/capitoli/cap6.tex
+++ b/capitoli/cap6.tex
@@ -10,7 +10,7 @@ Questa evoluzione tuttavia non è lineare né priva di ostacoli. L’interoperab
 
 Dopo anni in cui i vari produttori fornivano soluzioni frammentate e proprietarie, oggi una nuova visione orientata sta guidando gli sviluppi concentrandosi su interoperabilità, sostenibilità e intelligenza diffusa. Questa transizione non riguarda soltanto l’arrivo di nuovi dispositivi e nuove tecnologie, ma è un cambiamento più profondo, la casa interagisce con i suoi abitanti impara da loro e si adatta in modo intelligente.
 
-Le abitazioni del futuro saranno ambienti realmente smart, capaci di prevedere i nostri bisogni, reagire in tempo reale, proteggere dati sensibili e garantire accessibilità a tutti. In questo capitolo analizziamo le nuove tendenze emergenti, valutandone potenzialità e sfide.
+Le abitazioni del futuro quindi saranno case realmente smart, saranno capaci di prevedere i nostri bisogni, sapranno reagire in tempo reale ad eventi, proteggeranno dati sensibili e garantiranno l'accessibilità a tutti. In questo nuovo capitolo andremo ad analizzare le nuove tendenze emergenti, valutandone potenzialità e sfide.
 
 \section{Lo standard Matter e i protocolli IP-native}
 
@@ -20,7 +20,8 @@ Matter non è soltanto un nuovo standard, ma è il simbolo di una storica allean
 
 Il punto di forza di Matter è basato su un modello applicativo standardizzato, che rende possibile un dialogo strutturato e uniforme tra tutti i componenti della rete domestica. La configurazione di nuovi dispositivi avviene in modo semplice e tramite dei wizard attivabili tramite QR code o NFC, supporta inolte il controllo multi-ecosistema, questo rende possibile l’utilizzo dello stesso dispositivo con più assistenti vocali o app differenti, senza conflitti, ad esmpio in casa posso controllare una luce sia da Siri che da Alexa. Inoltre, Matter supporta e privilegia il controllo locale, riuscendo così a garantire continuità anche in assenza di connessione Internet.
 
-Basato sul protocollo di rete IPv6 e protetto dallo standard di crittografia TLS 1.3, Matter combina la scalabilità con la sicurezza.
+Basato sul protocollo di rete IPv6 e rafforzato dall’utilizzo dello standard di crittografia TLS 1.3, \textbf{Matter} riesce a coniugare due aspetti spesso difficili da bilanciare: la scalabilità e la sicurezza. In altre parole, il protocollo non solo è pensato per poter crescere e supportare un numero sempre maggiore di dispositivi, ma garantisce anche che lo scambio di informazioni tra i dispositivi avvenga in modo sicuro e protetto, riducendo così al minimo i rischi legati a possibili vulnerabilità o accessi non autorizzati.
+
 
 \subsection{Thread: architettura distribuita e resiliente}
 
@@ -49,15 +50,10 @@ Attraverso il \textit{federated learning}, i dispositivi intelligenti elaboreran
 Dopo aver evidenziato i benefici di una rete mesh nel capitolo precedente, le reti mesh oggi evolvono con l’integrazione dei nuovi standard Wi-Fi e Thread, abilitando così scenari più reattivi e modulari.
 
 
-\textbf{Wi-Fi 6, 6E e 7} rappresentano tappe fondamentali nell’evoluzione delle reti:
+Le versioni più recenti dello standard \textbf{Wi-Fi} hanno segnato tappe decisive nell’evoluzione delle reti domestiche e aziendali. Con \textbf{Wi-Fi 6}, ad esempio, sono state introdotte tecnologie come OFDMA, TWT e BSS Coloring, pensate per aumentare l’efficienza delle trasmissioni e ridurre la latenza, soprattutto in ambienti molto congestionati. La successiva estensione, \textbf{Wi-Fi 6E}, ha aperto l’accesso alla banda a 6 GHz, liberando nuovi canali e offrendo maggiori possibilità di connessione ai dispositivi dedicati alla smart home. Infine, la nuova \textbf{Wi-Fi 7}, ancora in fase di diffusione, promette prestazioni senza precedenti, con velocità teoriche fino a 46 Gbps e latenze ultra-basse \footcite{wifi6-spec}.  
 
-\begin{itemize}
-    \item \textbf{Wi-Fi 6}: introduce OFDMA, TWT e BSS Coloring, aumentando efficienza e riducendo la latenza.
-    \item \textbf{Wi-Fi 6E}: aggiunge la banda a 6 GHz, liberando nuovi canali per dispositivi smart.
-    \item \textbf{Wi-Fi 7}: promette latenze ultra-basse e velocità fino a 46 Gbps.
-\end{itemize}
+Per chiarezza espositiva, una tabella comparativa può riassumere i principali miglioramenti introdotti da ciascuna versione.
 
-Una breve tabella riassuntiva può essere utile nel capitolo:
 
 \begin{table}[H]
 \centering
@@ -76,41 +72,45 @@ Wi-Fi 7 & 2024 & 2.4 / 5 / 6 GHz & MLO, latenza bassa, throughput massimo \\
 
 \subsection{Edge e fog computing domestico}
 
-L’elaborazione locale dei dati tramite fog computing consente:
-\begin{itemize}
-    \item Risposte in tempo reale
-    \item Resilienza in caso di assenza di Internet
-    \item Protezione dei dati sensibili
-    \item Riduzione del traffico e costi cloud
-\end{itemize}
+L’elaborazione locale dei dati, resa possibile dal paradigma del \textbf{fog computing}, introduce diversi vantaggi rispetto a un approccio interamente basato sul cloud. Innanzitutto, consente di ottenere risposte in tempo reale, riducendo la latenza e garantendo un controllo immediato sui dispositivi domestici. Un altro aspetto rilevante è la resilienza: anche in assenza di connessione a Internet, i sistemi possono continuare a funzionare in autonomia, senza dipendere da server esterni.  
 
-Progetti come K3s, una distribuzione leggera e semplificata di Kubernetes, pensata per ambienti IoT permetteranno l’orchestrazione di microservizi direttamente sugli hub domestici, trasformando così ogni stanza in un nodo intelligente.
+Inoltre, mantenere i dati vicino alla fonte aumenta il livello di protezione delle informazioni sensibili, limitando l’esposizione verso l’esterno. Non va poi trascurato il beneficio economico: elaborare localmente riduce il traffico generato verso il cloud e, di conseguenza, i costi associati.  
+
+In questa direzione si collocano progetti come \textbf{K3s}, una distribuzione leggera e semplificata di Kubernetes progettata per scenari IoT. Grazie a soluzioni di questo tipo, diventa possibile orchestrare microservizi direttamente sugli hub domestici, trasformando ogni stanza della casa in un nodo intelligente e autonomo, capace di cooperare con gli altri per offrire un ambiente realmente distribuito.
+
 
 \section{Privacy, sicurezza e fiducia digitale}
 
 \subsection{Le nuove sfide dell’abitazione intelligente}
 
-Sebbene l’intelligenza artificiale migliori l’automazione e l’efficienza dele nostre case, essa richiede un accesso costante ai nostri dati sensibili come le nostre abitudini quotidiane, i pattern di presenza nella casa e le nostre preferenze personali. Questa dipendenza  impone l’adozione di diverse rigorose misure di sicurezza e un approccio responsabile al trattamento dei dati.
+L’impiego dell’intelligenza artificiale nelle abitazioni connesse promette di trasformare radicalmente il modo in cui viviamo la nostra casa, offrendo livelli di automazione ed efficienza impensabili fino a pochi anni fa. Tuttavia, a fronte di questi nuovi benefici emergono anche delle nuove sfide. Per poter funzionare in maniera efficace, i nuovi sistemi intelligenti hanno bisogno di raccogliere e analizzare una gran quantità di dati personali: dagli orari in cui noi siamo presenti o assenti in casa, fino alle nostre preferenze in termini di comfort e consumo energetico.  
+
+Tutte queste informazioni, se da un lato consentono di ottimizzare i servizi e anticipare i nostri bisogni, dall’altro lato delineano un quadro delicato in termini di sicurezza e riservatezza. La dipendenza dai dati rende indispensabile un approccio responsabile alla loro gestione, che includa misure tecniche avanzate, ma anche pratiche di trasparenza e consapevolezza da parte dei fornitori.  
+
+In Europa, il \textit{General Data Protection Regulation} (GDPR) stabilisce i principi fondamentali per la protezione dei dati personali \footcite{gdpr}. Linee guida specifiche per l’IoT e la smart home sono state elaborate anche dall’\textit{European Union Agency for Cybersecurity} (ENISA), che sottolinea l’importanza di criteri di sicurezza fin dalla fase di progettazione (\textit{security by design}) \footcite{enisa-smart-home}. Negli Stati Uniti, il \textit{National Institute of Standards and Technology} (NIST) ha pubblicato raccomandazioni per la gestione dei rischi in sistemi IoT, offrendo un quadro di riferimento utile anche in contesti internazionali \footcite{nist-iot}.  
+
+In questo contesto, la protezione dei dati non riguarda soltanto l’integrità delle infrastrutture digitali, ma diventa una condizione essenziale per mantenere la fiducia degli utenti verso le soluzioni di domotica. Senza fiducia, infatti, anche le tecnologie più evolute rischiano di essere percepite come troppo invasive, rallentandone così la diffusione e l’adozione su larga scala.
+
+
 
 \subsection{Strategie di protezione}
 
-\begin{itemize}
-    \item \textbf{Zero Trust Architecture}: ogni richiesta è validata, anche all’interno della rete.
-    \item \textbf{Segmentazione delle reti}: per limitare i danni in caso di compromissione.
-    \item \textbf{Crittografia omomorfica}: elabora dati cifrati senza decifrarli.
-    \item \textbf{Blockchain per audit trail}: tracciabilità sicura delle azioni eseguite.
-\end{itemize}
-\section{Inclusività come principi guida}
+Per affrontare le sfide legate alla sicurezza dei sistemi domotici, negli ultimi anni si sono affermati diversi approcci tecnologici. Uno dei più rilevanti è la \textbf{Zero Trust Architecture}, che si fonda sul principio secondo cui nessuna richiesta deve essere considerata affidabile a priori: ogni accesso, anche proveniente dall’interno della rete domestica, deve essere verificato e validato.  
+
+Un’altra strategia utile è la \textbf{segmentazione delle reti}, che consiste nel suddividere l’infrastruttura in più porzioni isolate tra loro. In questo modo, qualora un dispositivo venga compromesso, i danni rimangono circoscritti e non si propagano a tutta la rete.  
+
+In ambito più sperimentale, la \textbf{crittografia omomorfica} rappresenta un’innovazione promettente: essa permette di elaborare i dati mantenendoli cifrati, evitando che debbano essere decifrati in fase di analisi. Infine, l’impiego della \textbf{blockchain} può fornire un registro distribuito e immodificabile delle operazioni compiute, utile a garantire la tracciabilità e a rafforzare i meccanismi di audit trail.
+
+\section{Inclusività come principio guida}
 
 \subsection{Tecnologia accessibile a tutti}
 
-Domotica inclusiva significa:
-\begin{itemize}
-    \item Interfacce adattive per anziani e disabili
-    \item Supporto vocale, gestuale e aptico
-    \item Soluzioni retrofit per abitazioni esistenti
-    \item Promozione dell’open source e del fai-da-te
-\end{itemize}
+Un’altra sfida cruciale per la domotica residenziale del futuro è quella dell’\textbf{inclusività}, ovvero la capacità delle soluzioni tecnologiche di adattarsi alle esigenze di utenti molto diversi tra loro, con abilità e conoscenze tecnologiche variegate, senza lasciare indietro nessuno. Rendere la tecnologia accessibile a tutti significa, innanzitutto, progettare delle interfacce realmente intuitive e \textbf{adattive}, capaci di supportare gli anziani e le persone con disabilità.  
+
+Strumenti di interazione alternativi, come i comandi \textbf{vocali}, \textbf{gestuali} o persino \textbf{aptici}, possono facilitare di molto l’uso quotidiano della casa smart. Allo stesso tempo, è importante non dimenticare le abitazioni già esistenti: le soluzioni deveono essere il più possibile \textbf{retrofit}, permettendo di integrare componenti intelligenti senza dover rifare completamente gli impianti, questi punti rappresentano un passaggio fondamentale in questa direzione.  
+
+Infine, la promozione dell’\textbf{open source} e del \textbf{fai-da-te} offrono la possibilità di sperimentare e personalizzare le soluzioni in base alle proprie esigenze, ampliando il grado di partecipazione degli utenti finali e rendendo la domotica un fenomeno inclusivo e condiviso.
+
 
 \section{Conclusioni: la casa come alleata}
 
